[package]
name = "client"
version = "0.1.0"
edition = "2021"
regex = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
types = { path = "../types" }